bk_ida/gccida/c2/dwarf2out_begin_prologue
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_begin_prologue/src/dwarf2out.c:2552:12: error: expected expression
*( _OWORD *)&v3[v6].dw_fde_current_label = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_begin_prologue/src/dwarf2out.c:2552:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v3[v6].dw_fde_current_label = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_begin_prologue/src/dwarf2out.c:2559:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = 0LL; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_begin_prologue/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_begin_prologue/src/obj/dwarf2out.o] Error 1
